[tool.poetry]
name = "ttcli"
version = "1.1.1"
description = "Time tracking tool for the cli"
readme = "README.md"
authors = ["Bjørn Snoen <bjorn@fink.no>"]

[tool.poetry.scripts]
tt-cli = "ttcli.main:cli"
tt-a = "ttcli.main:write_to_all_cmd"

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "*"
click = "*"
click-help-colors = "*"
html5lib = "*"
python-dateutil = "*"
python-dotenv = "*"
requests = "*"
rich = "*"
pydantic = "^1.9.0"
typing-extensions = "^4.1.1"
inflection = "^0.5.1"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"

